# PLATED

./: .flake8  .gitignore  LICENSE  README.md  plated_db_schema.dbml  pyproject.toml
plated/: .env.dist  .flake8  answers.json  chapters.json  db_backup.json  lessons.json  manage.py  pyproject.toml  questions.json  requirements.txt  subjects.json  units.json
plated/core/: models.py
plated/curriculum/: admin.py  apps.py  context_processors.py  models.py
plated/curriculum/migrations/: 0001_initial.py  0002_alter_curriculum_updated_at.py  0003_alter_curriculum_updated_at.py  0004_alter_curriculum_end_date_and_more.py  0005_remove_curriculum_created_at_and_more.py  0006_semester_syllabus.py  0007_alter_semester_ending_date_and_more.py  0008_alter_semester_title.py
plated/dashboard/: urls.py  utils.py  views.py
plated/exams/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
plated/exams/migrations/: 0001_initial.py  0002_alter_exam_duration.py  0002_alter_exam_options.py  0003_exam_score.py  0004_alter_exam_score.py
plated/home/: urls.py  views.py
plated/myAuth/: apps.py  urls.py
plated/plated/: asgi.py  settings.py  urls.py  wsgi.py
plated/questions/: admin.py  models.py
plated/questions/migrations/: 0001_initial.py  0002_alter_answer_body.py  0002_alter_question_options_alter_answer_body.py  0003_alter_answer_question.py  0004_alter_question_lesson.py
plated/static/css/: style.css
plated/static/js/: script.js
plated/staticfiles/css/: style.css
plated/staticfiles/js/: script.js
plated/subjects/: admin.py  models.py  urls.py  utils.py  views.py
plated/subjects/migrations/: 0001_initial.py  0002_alter_chapter_options_alter_lesson_options_and_more.py  0002_alter_subject_cover_pic_unit.py  0003_alter_subject_grade.py  0003_alter_unit_number_chapter_lesson.py  0004_alter_chapter_title_alter_lesson_title_and_more.py  0005_lesson_caption.py  0006_alter_chapter_unit_alter_lesson_chapter_and_more.py  0007_rename_cover_pic_subject_cover.py  0008_remove_subject_grade.py  0009_lesson_grade_lesson_semester.py  0010_rename_name_subject_title.py
plated/subjects/models/: __init__.py  base.py  chapters.py  lessons.py  subjects.py  units.py
plated/users/: forms.py  models.py  urls.py  views.py
plated/users/migrations/: 0001_initial.py  0002_alter_student_tagged_lessons.py  0002_student_tagged_lessons.py
plated_api/: .env.dist  manage.py  mypy.ini
plated_api/classes/: admin.py  apps.py  models.py  signals.py  tests.py
plated_api/classes/migrations/: 0001_initial.py
plated_api/core/: models.py
plated_api/dashboard/: models.py
plated_api/dashboard/migrations/: 0001_initial.py
plated_api/exams/: admin.py
plated_api/exams/migrations/: 0001_initial.py
plated_api/exams/models/: __init__.py  answers.py  exam.py  exam_questions.py
plated_api/grades/: admin.py  apps.py
plated_api/grades/migrations/: 0001_initial.py  0002_alter_curriculum_name.py  0003_semester_curriculum.py  (+2 more)
plated_api/plated_api/: asgi.py  settings.py  urls.py  wsgi.py
plated_api/questions/: admin.py
plated_api/resources/: admin.py
plated_api/users/: admin.py  apps.py  signals.py
(+88 files in other folders)
