# Project configuration file for plated

[project]


name = "plated"
description = "An educational platform web application."
authors = [{ name = "Ibrahim Morad", email = "ibrahimmorad31@gmail.com" }]
maintainers = [{ name = "Ibrahim Morad", email = "ibrahimmorad31@gmail.com" }]
version = "0.6.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["django>=5.0", "django-rest-framework", "django-environ"]
keywords = [
  "python",
  "education",
  "educational",
  "secondary school",
  "django",
  "django project",
  "rest api",
  "rest framework",
  "react",
  "big project",
  "web application",
  "full stack",
  "backend",
  "frontend",
]

[project.optional-dependencies]

dev = ["unittest", "black", "isort", "flake8"]


[project.urls]

homepage = "https://github.com/IbrahimMurad/PLATED"
repository = "https://github.com/IbrahimMurad/PLATED"


[tool.black]

exclude = '/(\.git|\.mypy_cache|\.pytest_cache|\.vscode|\.venv|__pycache__)/'
line-length = 88
target-version = ['py38', 'py39', 'py310']


[tool.isort]

profile = 'black'
line_length = 88
skip = '/(\.git|\.mypy_cache|\.pytest_cache|\.vscode|\.venv|__pycache__)/'
